# Hyper-V-MCP-RS

./: .gitignore  Cargo.toml  README.md
sidecar/: hyperv_sidecar.ps1
src/: config.rs  dpapi.rs  lib.rs  main.rs  ps_escape.rs  resources.rs  server.rs  sidecar.rs  tool.rs
src/tools/: add_vm_assignable_device.rs  add_vm_dvd_drive.rs  add_vm_fibre_channel_hba.rs  add_vm_gpu_partition_adapter.rs  add_vm_group_member.rs  add_vm_hard_disk_drive.rs  add_vm_host_assignable_device.rs  add_vm_migration_network.rs  add_vm_network_adapter.rs  add_vm_network_adapter_acl.rs  add_vm_network_adapter_extended_acl.rs  add_vm_network_adapter_routing_domain_mapping.rs  add_vm_remote_fx3d_video_adapter.rs  add_vm_scsi_controller.rs  add_vm_storage_path.rs  add_vm_switch.rs  add_vm_switch_extension_port_feature.rs  add_vm_switch_extension_switch_feature.rs  add_vm_switch_team_member.rs  checkpoint_vm.rs  compare_vm.rs  complete_vm_failover.rs  connect_vm_network_adapter.rs  connect_vm_san.rs  convert_vhd.rs  copy_from_guest.rs  copy_to_guest.rs  copy_vm_file.rs  debug_vm.rs  disable_vm_console_support.rs  disable_vm_eventing.rs  disable_vm_integration_service.rs  disable_vm_migration.rs  disable_vm_remote_fx_physical_video_adapter.rs  disable_vm_replication.rs  disable_vm_resource_metering.rs  disable_vm_switch_extension.rs  disable_vm_tpm.rs  disconnect_vm_network_adapter.rs  disconnect_vm_san.rs  (+192 more)
tests/: sidecar_integration.rs
